# gha-experts

./: .gitignore  .pre-commit-config.yaml  .yamllint  README.md  justfile  pyproject.toml  pyproject.toml.yamlfix
.github/workflows/: 01-building-blocks.yaml  02-workflow-events.yaml  03-workflow-runners.yaml  04-using-actions.yaml  05-1-filter-activity-types.yaml
src/: main.py
src/api/: catch.py
transit/: TESTING.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
transit/src/: App.test.tsx  App.tsx
transit/src/test/: setup.ts
