[project]
name = "devopx"
version = "0.1.0"
description = "Complete automation of CI/CD pipelines with GitHub Actions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.121.3",
    "fastapi-cli>=0.0.16",
    "loguru>=0.7.3",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "commitizen>=4.10.0",
    "pre-commit>=4.5.0",
    "pyrefly>=0.42.3",
    "ruff>=0.14.6",
    "ty>=0.0.1a27",
    "yamlfix>=1.19.0",
    "yamllint>=1.37.1",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver2"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
